tests/fail/expr/stable/methodcall.stderr
error[E0308]: mismatched types
 --> tests/fail/expr/stable/methodcall.rs:2:25
  |
2 |     one_assert::assert!("".to_string().len());
  |                         ^^^^^^^^^^^^^^^^^^^^ expected `bool`, found `usize`

error[E0689]: can't call method `len` on ambiguous numeric type `{integer}`
 --> tests/fail/expr/stable/methodcall.rs:3:27
  |
3 |     one_assert::assert!(1.len());
  |                           ^^^
